packages/scaml.1.2.0~pre7/tests/fail/big_map_parm.ml
open SCaml
type param = (int, int) big_map
let main (_ : param) () = [], ()
